# certbot-dns-directadmin

./: .coveragerc  .flake8  .gitignore  .semrelrc  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  credentials.ini.example  credentials.ini.exemple  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker-publish.yml  generate-coverage.yml  python-app.yml  python-publish.yml
certbot_dns_directadmin/: __init__.py  directadmin.py  dns_directadmin.py
docs/: api.rst  conf.py  index.rst
scripts/: build.sh
tests/: test_dns_directadmin.py
